--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,18 @@
 .box{
+	width:500px;
+	height:300px;
 	display:flex;
 	justify-content:center;
 	text-align:center;
+	margin-top:20px;
+}
+.summary{
+	width:200px;
+	height:100%;
+	background-color:#f7fbff;
+	border-top:5px solid #5ea4f3;
+}
+.product{
+	width:100%;
+	height:100%;
 }
