--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
 .block-heading{
-	color:#3b99e0;
+	text-align:center;
+}
+.product > .row > .col1{
+	display:flex;
+	justify-content:space-between;
+	align-items:center;
 }
