--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 	display:flex;
 	justify-content:space-between;
 	align-items:center;
-	padding:0px;
+	margin-top:20px;
 }
 .product > .row > .col1 > p{
 	margin:0px;
